2011-07-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm: Read configuration for the new enterprise
	  SNMP server.
	
	* lib/PandoraFMS/Core.pm: Added server type for the new enterprise SNMP
	  server.

2011-07-21  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed undeclared variable

2011-07-14  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Use prediction_module to tell
	  prediction modules apart instead of prediction_module/custom_integer_1
	  combinations.

2011-07-13  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Added support for synthetic
	  modules (enterprise).

2011-07-08  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Delete unknown modules after a defined number
	  of days.

2011-07-08  Koichiro Kikuchi  <koichiro@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed alert macro substitution. Now
	  alert_macro_substitute() does not substitute already substituted
	  part of string. Also fixed alert macro substitution for user
	  defined alerts to avoid alert macros other than _field[1-3]_
	  substituted twice.

2011-07-08  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed alert-only planned downtimes.

2011-07-08  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fiexd bug in recon script

2011-07-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added support for warning/critical status
	  regexp (works with both numeric and string data types). Added
	  support for alert-only planned downtimes.

2011-07-07  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed little bug
	in a check to exception condition

2011-07-07  Sergio Martin <sergio.martin@artica.es>

	* Makefile.PL
	lib/PandoraFMS/ReconServer.pm
	util/recon_scripts/snmpdevices.pl: Added disabled
	condition to recon tasks, readd NetAddr dependence and
	fix several bugs in addres loop into recon script
